--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -13,28 +13,27 @@
     },
     "type": "module",
     "devDependencies": {
-        "@testing-library/jest-dom": "^6.1.5",
-        "@testing-library/react": "^14.1.2",
-        "@types/react": "^18.2.43",
-        "@types/react-dom": "^18.2.17",
-        "@vitejs/plugin-react-swc": "^3.5.0",
-        "@vitest/ui": "^1.0.4",
-        "jsdom": "^23.0.1",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.7",
-        "vitest": "^1.0.4"
+        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/react": "^14.2.1",
+        "@types/react": "^18.2.66",
+        "@types/react-dom": "^18.2.22",
+        "@vitejs/plugin-react-swc": "^3.6.0",
+        "@vitest/ui": "^1.3.1",
+        "jsdom": "^24.0.0",
+        "typescript": "^5.4.2",
+        "vite": "^5.1.6",
+        "vitest": "^1.3.1"
     },
     "dependencies": {
-        "@floating-ui/react": "^0.26.4",
+        "@floating-ui/react": "^0.26.9",
         "@use-gesture/react": "^10.3.0",
-        "classnames": "^2.3.2",
+        "classnames": "^2.5.1",
         "fuse.js": "^7.0.0",
         "pentatrion-fonts": "workspace:*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-polymorphic-types": "^2.0.0",
         "react-spring": "^9.7.3",
-        "sass": "^1.69.5",
-        "usehooks-ts": "^2.9.1"
+        "sass": "^1.72.0"
     }
 }
