--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -33,6 +33,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-polymorphic-types": "^2.0.0",
+        "react-sortablejs": "^6.1.4",
         "react-spring": "^9.7.3",
         "sass": "^1.72.0"
     }
