add steps component

--- a/apps/storybook/Makefile
+++ b/apps/storybook/Makefile
@@ -7,7 +7,7 @@ help:
 
 .PHONY: deploy
 deploy: ## Build and deploy examples
-	# pnpm build
+	pnpm build
 	rsync -av \
 		$(local_path)/storybook-static/ \
 		berlin:prod/$(remote_host)
