--- a/apps/maplibre-sandbox/package.json
+++ b/apps/maplibre-sandbox/package.json
@@ -28,6 +28,7 @@
         "maplibre-gl": "^4.1.0",
         "merge-options": "^3.0.4",
         "pentatrion-design": "workspace:*",
+        "pentatrion-geo": "workspace:*",
         "proj4": "^2.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
