--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -16,12 +16,14 @@
     "@storybook/addon-actions": "^8.0.0",
     "@storybook/addon-interactions": "^8.0.0",
     "@storybook/test": "^8.0.0",
+    "@types/geojson": "^7946.0.14",
     "@use-gesture/react": "^10.3.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "fuse.js": "^7.0.0",
     "maplibre-components": "workspace:*",
     "maplibre-gl": "^4.1.0",
     "pentatrion-design": "workspace:*",
+    "pentatrion-geo": "workspace:*",
     "react": "^18.2.0",
     "react-maplibre-components": "workspace:*",
     "react-sortablejs": "^6.1.4",
