--- a/apps/vite-sandbox/package.json
+++ b/apps/vite-sandbox/package.json
@@ -16,6 +16,7 @@
         "fuse.js": "^7.0.0",
         "maplibre-gl": "^4.1.0",
         "pentatrion-design": "workspace:*",
+        "pentatrion-geo": "workspace:*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-maplibre-components": "workspace:*",
