--- a/packages/pentatrion-geo/package.json
+++ b/packages/pentatrion-geo/package.json
@@ -5,6 +5,8 @@
   "license": "ISC",
   "main": "src/index.ts",
   "dependencies": {
-    "@types/geojson": "^7946.0.14"
+    "@types/geojson": "^7946.0.14",
+    "maplibre-gl": "^4.1.0",
+    "nanoid": "^5.0.6"
   }
 }
