--- a/packages/maplibre-components/package.json
+++ b/packages/maplibre-components/package.json
@@ -13,6 +13,8 @@
         "pentatrion-design": "workspace:*"
     },
     "devDependencies": {
-        "@types/mapbox__point-geometry": "^0.1.4"
+        "@types/mapbox__point-geometry": "^0.1.4",
+        "@types/react": "^18.2.72",
+        "@types/react-dom": "^18.2.22"
     }
 }
