ll-popup enhancements

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,8 @@
   ],
   "rules": {
     "react-refresh/only-export-components": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-ts-comment": "off"
   },
   "overrides": [
     {
