--- a/packages/maplibre-react-components/package.json
+++ b/packages/maplibre-react-components/package.json
@@ -1,10 +1,15 @@
 {
   "name": "maplibre-react-components",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "React components for MapLibre GL JS",
   "keywords": [],
   "author": "Hugues Tavernier",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lhapaipai/lonlat.git"
+  },
+  "homepage": "https://github.com/lhapaipai/lonlat/tree/main/packages/maplibre-react-components",
   "main": "src/index.ts",
   "scripts": {
     "test": "vitest",
@@ -24,10 +29,6 @@
     "typescript": "^5.4.2",
     "vite": "^5.1.6",
     "vitest": "^1.3.1"
-  },
-  "dependencies": {
-    "maplibre-components": "workspace:*",
-    "pentatrion-design": "workspace:*"
   },
   "peerDependencies": {
     "maplibre-gl": ">=2.0.0",
