--- a/packages/maplibre-react-components/tsconfig.json
+++ b/packages/maplibre-react-components/tsconfig.json
@@ -18,5 +18,6 @@
                 "../../apps/storybook/node_modules/@storybook/addon-actions"
             ]
         }
-    }
+    },
+    "include": ["src"]
 }
