--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -20,6 +20,7 @@
         "@vitejs/plugin-react-swc": "^3.6.0",
         "@vitest/ui": "^1.3.1",
         "jsdom": "^24.0.0",
+        "maplibre-gl": "^4.1.0",
         "typescript": "^5.4.2",
         "vite": "^5.1.6",
         "vitest": "^1.3.1"
@@ -30,8 +31,8 @@
         "@use-gesture/react": "^10.3.0",
         "classnames": "^2.5.1",
         "fuse.js": "^7.0.0",
-        "pentatrion-fonts": "workspace:*",
         "pentatrion-design": "workspace:*",
+        "pentatrion-fonts": "workspace:*",
         "pentatrion-geo": "workspace:*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
