--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "maplibre-components": "workspace:*",
+    "pentatrion-geo": "workspace:*",
     "pentatrion-design": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
