--- a/packages/maplibre-react-components/package.json
+++ b/packages/maplibre-react-components/package.json
@@ -34,6 +34,7 @@
     "@vitest/ui": "^1.3.1",
     "jsdom": "^24.0.0",
     "maplibre-gl": "^4.1.0",
+    "pentatrion-design": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tsup": "^8.0.2",
@@ -47,9 +48,6 @@
     "react-dom": ">=16.8.0"
   },
   "peerDependenciesMeta": {
-    "mapbox-gl": {
-      "optional": true
-    },
     "maplibre-gl": {
       "optional": true
     }
