--- a/apps/maplibre-react-sandbox/package.json
+++ b/apps/maplibre-react-sandbox/package.json
@@ -11,23 +11,23 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.9",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@mapbox/mapbox-gl-draw": "^1.4.3",
     "@reduxjs/toolkit": "^2.2.1",
     "@turf/turf": "6.5.0",
-    "@types/geojson": "^7946.0.14",
     "d3-array": "^3.2.4",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
     "geojson": "^0.5.0",
     "immutable": "5.0.0-beta.5",
     "maplibre-gl": "^4.1.0",
+    "maplibre-react-components": "workspace:*",
     "nanoid": "^5.0.6",
     "pentatrion-design": "workspace:*",
     "pentatrion-geo": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.7",
-    "maplibre-react-components": "workspace:*",
     "react-redux": "^9.1.0",
     "react-sortablejs": "^6.1.4",
     "sass": "^1.72.0"
@@ -36,6 +36,8 @@
     "@types/d3-array": "^3.2.1",
     "@types/d3-scale": "^4.0.8",
     "@types/d3-shape": "^3.1.6",
+    "@types/geojson": "^7946.0.14",
+    "@types/google.maps": "^3.55.5",
     "@types/mapbox__mapbox-gl-draw": "^1.4.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
