--- a/packages/pentatrion-geo/package.json
+++ b/packages/pentatrion-geo/package.json
@@ -15,6 +15,8 @@
     "pentatrion-design": "workspace:*"
   },
   "devDependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
+    "@types/google.maps": "^3.55.5",
     "@types/mapbox__point-geometry": "^0.1.4",
     "@types/react": "^18.2.72",
     "@types/react-dom": "^18.2.22",
@@ -23,6 +25,7 @@
   },
   "peerDependencies": {
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react-dom": ">=16.8.0",
+    "@googlemaps/js-api-loader": "^1.16.6"
   }
 }
