--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
         "prettier": "^3.2.5"
+    },
+    "volta": {
+        "node": "18.20.1"
     }
 }
