Steps UI enhancement

--- a/packages/pentatrion-fonts/config-lonlat.json
+++ b/packages/pentatrion-fonts/config-lonlat.json
@@ -347,6 +347,12 @@
       "css": "marker",
       "code": 59413,
       "src": "iconic"
+    },
+    {
+      "uid": "44e04715aecbca7f266a17d5a7863c68",
+      "css": "plus",
+      "code": 59417,
+      "src": "fontawesome"
     }
   ]
 }
