context menu UI enhancement

--- a/packages/pentatrion-fonts/config-lonlat.json
+++ b/packages/pentatrion-fonts/config-lonlat.json
@@ -353,6 +353,48 @@
       "css": "plus",
       "code": 59417,
       "src": "fontawesome"
+    },
+    {
+      "uid": "e216fcf794f8a9f9f936490755492672",
+      "css": "point-inter",
+      "code": 59418,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M505.8 305.8A192.3 192.3 0 0 0 505.8 690.4 192.3 192.3 0 0 0 505.8 305.8ZM505.8 421.2A76.9 76.9 0 0 1 505.8 575 76.9 76.9 0 0 1 505.8 421.2ZM505.8 763.5A76.9 76.9 0 0 1 505.8 917.3 76.9 76.9 0 0 1 505.8 763.5ZM505.8 76.9A76.9 76.9 0 0 1 505.8 230.8 76.9 76.9 0 0 1 505.8 76.9Z",
+        "width": 1000
+      },
+      "search": [
+        "point-inter"
+      ]
+    },
+    {
+      "uid": "3a61c6a35026d9cab9266ac994132e05",
+      "css": "point-from",
+      "code": 59419,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M505.8 461.5A192.3 192.3 0 0 0 505.8 76.9 192.3 192.3 0 0 0 505.8 461.5ZM505.8 346.2A76.9 76.9 0 0 1 505.8 192.3 76.9 76.9 0 0 1 505.8 346.2ZM505.8 703.8A76.9 76.9 0 0 1 505.8 550 76.9 76.9 0 0 1 505.8 703.8ZM505.8 934.6A76.9 76.9 0 0 1 505.8 780.8 76.9 76.9 0 0 1 505.8 934.6Z",
+        "width": 1000
+      },
+      "search": [
+        "point-from"
+      ]
+    },
+    {
+      "uid": "f30ac28ad00e17901f504ce3286b5446",
+      "css": "point-to",
+      "code": 59420,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M505.8 550A192.3 192.3 0 0 0 505.8 934.6 192.3 192.3 0 0 0 505.8 550ZM505.8 665.4A76.9 76.9 0 0 1 505.8 819.2 76.9 76.9 0 0 1 505.8 665.4ZM505.8 307.7A76.9 76.9 0 0 1 505.8 461.5 76.9 76.9 0 0 1 505.8 307.7ZM505.8 76.9A76.9 76.9 0 0 1 505.8 230.8 76.9 76.9 0 0 1 505.8 76.9Z",
+        "width": 1000
+      },
+      "search": [
+        "point-to"
+      ]
     }
   ]
 }
