LLMarker/RLLMarker ui enhancements

--- a/packages/pentatrion-geo/package.json
+++ b/packages/pentatrion-geo/package.json
@@ -18,12 +18,16 @@
   },
   "devDependencies": {
     "@googlemaps/js-api-loader": "^1.16.6",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
     "@types/google.maps": "^3.55.5",
     "@types/mapbox__point-geometry": "^0.1.4",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
+    "jsdom": "^24.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vitest": "^1.4.0"
   },
   "peerDependencies": {
     "@googlemaps/js-api-loader": "^1.16.6",
