--- a/packages/pentatrion-design/package.json
+++ b/packages/pentatrion-design/package.json
@@ -13,6 +13,7 @@
     },
     "type": "module",
     "devDependencies": {
+        "@reduxjs/toolkit": "^2.2.3",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.2",
         "@types/geojson": "^7946.0.14",
@@ -22,6 +23,7 @@
         "@vitest/ui": "^1.4.0",
         "jsdom": "^24.0.0",
         "maplibre-gl": "^4.1.2",
+        "react-redux": "^9.1.0",
         "typescript": "^5.4.3",
         "vite": "^5.2.8",
         "vitest": "^1.4.0"
