--- a/.eslintrc
+++ b/.eslintrc
@@ -2,36 +2,32 @@
   "root": true,
   "env": {
     "browser": true,
-    "es2020": true
+    "es2020": true,
   },
   "parser": "@typescript-eslint/parser",
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react-hooks/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
   },
-  "plugins": [
-    "react-refresh"
-  ],
+  "plugins": ["react-refresh"],
   "rules": {
     "react-refresh/only-export-components": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/ban-ts-comment": "off"
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/ban-types": "off",
   },
   "overrides": [
     {
-      "files": [
-        "*.cjs",
-        "*.mjs"
-      ],
+      "files": ["*.cjs", "*.mjs"],
       "env": {
-        "node": true
-      }
-    }
-  ]
+        "node": true,
+      },
+    },
+  ],
 }
