--- a/apps/maplibre-sandbox/tsconfig.json
+++ b/apps/maplibre-sandbox/tsconfig.json
@@ -1,12 +1,11 @@
 {
-    "extends": "../../tsconfig.base.json",
-    "compilerOptions": {
-        "checkJs": true,
-        "allowJs": true,
-        "paths": {
-          "~/*": [
-            "./src/*"
-          ]
-        }
+  "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "checkJs": true,
+    "allowJs": true,
+    "paths": {
+      "~/*": ["./src/*"]
     }
+  },
+  "include": ["src"]
 }
