--- a/packages/pentatrion-design/tsconfig.json
+++ b/packages/pentatrion-design/tsconfig.json
@@ -18,5 +18,8 @@
                 "../../apps/storybook/node_modules/@storybook/addon-actions"
             ]
         }
-    }
+    },
+    "include": [
+      "components", "hooks","lib","redux", "tests", "styles"
+    ],
 }
