--- a/packages/pentatrion-geo/package.json
+++ b/packages/pentatrion-geo/package.json
@@ -5,6 +5,9 @@
   "author": "Hugues Tavernier",
   "license": "ISC",
   "main": "src/index.ts",
+  "scripts": {
+    "tsc": "tsc"
+  },
   "dependencies": {
     "@floating-ui/dom": "^1.6.3",
     "@floating-ui/react": "^0.26.10",
@@ -27,6 +30,7 @@
     "jsdom": "^24.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "typescript": "^5.4.5",
     "vitest": "^1.4.0"
   },
   "peerDependencies": {
