--- a/extra/swagger/package.json
+++ b/extra/swagger/package.json
@@ -12,7 +12,7 @@
     "generate-nominatim": "o2ts ./public/nominatim.yaml ./export/nominatim.ts",
     "generate-openrouteservice": "o2ts ./public/openrouteservice.json ./export/openrouteservice.ts",
     "generate-ign-completion": "o2ts ./public/ign-completion.yaml ./export/ign-completion.ts",
-    "generate-ign-geocodage": "o2ts ./public/ign-geocodage.yaml ../../packages/pentatrion-geo/src/ign/api-geocodage.d.ts",
+    "generate-ign-geocodage": "o2ts ./public/ign-geocodage.yaml ./export/api-geocodage.d.ts",
     "generate": "npm run generate-nominatim && npm run generate-ign-completion && npm run generate-ign-geocodage"
   },
   "keywords": [],
