--- a/extra/swagger/package.json
+++ b/extra/swagger/package.json
@@ -10,10 +10,9 @@
     "build": "vite build",
     "swagger": "vite preview",
     "generate-nominatim": "o2ts ./public/nominatim.yaml ./export/nominatim.ts",
-    "generate-openrouteservice": "o2ts ./public/openrouteservice.json ./export/openrouteservice.ts",
+    "generate-ors": "o2ts ./public/openrouteservice.json ./export/openrouteservice.d.ts",
     "generate-ign-completion": "o2ts ./public/ign-completion.yaml ./export/ign-completion.ts",
-    "generate-ign-geocodage": "o2ts ./public/ign-geocodage.yaml ./export/api-geocodage.d.ts",
-    "generate": "npm run generate-nominatim && npm run generate-ign-completion && npm run generate-ign-geocodage"
+    "generate-ign-geocodage": "o2ts ./public/ign-geocodage.yaml ./export/api-geocodage.d.ts"
   },
   "keywords": [],
   "author": "Hugues Tavernier",
