--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -6,29 +6,40 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.10",
+    "@googlemaps/js-api-loader": "^1.16.6",
+    "@react-spring/web": "^9.7.3",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@turf/turf": "6.5.0",
+    "d3-array": "^3.2.4",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
+    "immutable": "5.0.0-beta.5",
+    "maplibre-gl": "^4.1.2",
     "maplibre-react-components": "workspace:*",
+    "nanoid": "^5.0.6",
     "pentatrion-design": "workspace:*",
     "pentatrion-geo": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.2",
-    "react-router-dom": "^6.22.3",
+    "react-redux": "^9.1.0",
+    "react-sortablejs": "^6.1.4",
     "sass": "^1.74.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.2",
-    "@types/node": "^20.12.4",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-shape": "^3.1.6",
+    "@types/geojson": "^7946.0.14",
+    "@types/google.maps": "^3.55.5",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "@vitejs/plugin-react-swc": "^3.6.0",
-    "jsdom": "^24.0.0",
     "typescript": "^5.4.3",
-    "vite": "^5.2.8",
-    "vitest": "^1.4.0"
+    "vite": "^5.2.8"
   }
 }
