--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-sortablejs": "^6.1.4",
-    "sass": "^1.74.1"
+    "sass": "^1.74.1",
+    "talkr": "^3.4.0"
   },
   "devDependencies": {
     "@types/d3-array": "^3.2.1",
