front add distractionFree feature

--- a/packages/pentatrion-fonts/config-lonlat.json
+++ b/packages/pentatrion-fonts/config-lonlat.json
@@ -441,6 +441,34 @@
       "search": [
         "isochrone"
       ]
+    },
+    {
+      "uid": "6ad547ed483c9ccf26fe5857ce702ffc",
+      "css": "sidebar-collapse",
+      "code": 59430,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M859 1000C936.4 1000 1000 936.4 1000 859V141C1000 63.6 936.4 0 859 0H628.2 141C63.6 0 0 63.6 0 141V859C0 936.4 63.6 1000 141 1000H628.2ZM859 923.1H666.7V76.9H859C894.8 76.9 923.1 105.2 923.1 141V859C923.1 894.8 894.8 923.1 859 923.1ZM589.7 923.1H141C105.2 923.1 76.9 894.8 76.9 859V141C76.9 105.2 105.2 76.9 141 76.9H589.7ZM746.2 640.9A38.5 38.5 0 0 0 772.5 627.9L862.3 525.3A38.5 38.5 0 0 0 862.3 474.7L772.5 372.1A38.5 38.5 0 0 0 718.2 368.5 38.5 38.5 0 0 0 714.6 422.8L782.3 500 714.6 577.2A38.5 38.5 0 0 0 718.2 631.5 38.5 38.5 0 0 0 746.2 640.9Z",
+        "width": 1000
+      },
+      "search": [
+        "sidebar-collapse"
+      ]
+    },
+    {
+      "uid": "7b0bc86da2ac10fa20f9bbc098913791",
+      "css": "sidebar-expand",
+      "code": 59431,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M859 1000C936.4 1000 1000 936.4 1000 859V141C1000 63.6 936.4 0 859 0H628.2 141C63.6 0 0 63.6 0 141V859C0 936.4 63.6 1000 141 1000H628.2ZM859 923.1H666.7V76.9H859C894.8 76.9 923.1 105.2 923.1 141V859C923.1 894.8 894.8 923.1 859 923.1ZM589.7 923.1H141C105.2 923.1 76.9 894.8 76.9 859V141C76.9 105.2 105.2 76.9 141 76.9H589.7ZM830.7 640.9A38.5 38.5 0 0 0 858.7 631.5 38.5 38.5 0 0 0 862.3 577.2L794.7 500 862.3 422.8A38.5 38.5 0 0 0 858.7 368.5 38.5 38.5 0 0 0 804.4 372.1L714.6 474.7A38.5 38.5 0 0 0 714.6 525.3L804.4 627.9A38.5 38.5 0 0 0 830.7 640.9Z",
+        "width": 1000
+      },
+      "search": [
+        "sidebar-expand"
+      ]
     }
   ]
 }
