--- a/extra/swagger/package.json
+++ b/extra/swagger/package.json
@@ -12,7 +12,8 @@
     "generate-nominatim": "o2ts ./public/nominatim.yaml ./export/nominatim.ts",
     "generate-ors": "o2ts ./public/openrouteservice.json ./export/openrouteservice.d.ts",
     "generate-ign-completion": "o2ts ./public/ign-completion.yaml ./export/ign-completion.ts",
-    "generate-ign-geocodage": "o2ts ./public/ign-geocodage.yaml ./export/api-geocodage.d.ts"
+    "generate-ign-geocodage": "o2ts ./public/ign-geocodage.yaml ./export/ign-geocodage.d.ts",
+    "generate-ign-itineraire": "o2ts ./public/ign-itineraire.yaml ./export/ign-itineraire.d.ts"
   },
   "keywords": [],
   "author": "Hugues Tavernier",
