--- a/packages/pentatrion-fonts/config-lonlat.json
+++ b/packages/pentatrion-fonts/config-lonlat.json
@@ -547,6 +547,26 @@
       "css": "settings",
       "code": 59438,
       "src": "fontawesome"
+    },
+    {
+      "uid": "fbda77ae4760e0338196c875d813adba",
+      "css": "person-biking",
+      "code": 59439,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M781.3 187.5A93.8 93.8 0 1 0 781.3 0 93.8 93.8 0 1 0 781.3 187.5ZM834.4 312.5L713.7 217.2C679.9 190.6 632.2 190.2 598.2 216.6L435.9 342C376 388.5 380.3 480.3 444.3 520.9L562.5 595.9V812.5C562.5 847.1 590.4 875 625 875S687.5 847.1 687.5 812.5V562.5C687.5 541.6 677.1 522.1 659.8 510.5L576.2 454.9 693.9 360.2 773.4 423.8C784.6 432.6 798.2 437.5 812.5 437.5H937.5C972.1 437.5 1000 409.6 1000 375S972.1 312.5 937.5 312.5H834.4ZM109.4 750A140.6 140.6 0 1 1 390.6 750 140.6 140.6 0 1 1 109.4 750ZM500 750A250 250 0 1 0 0 750 250 250 0 1 0 500 750ZM859.4 750A140.6 140.6 0 1 1 1140.6 750 140.6 140.6 0 1 1 859.4 750ZM1250 750A250 250 0 1 0 750 750 250 250 0 1 0 1250 750Z",
+        "width": 1250
+      },
+      "search": [
+        "person-biking"
+      ]
+    },
+    {
+      "uid": "21b42d3c3e6be44c3cc3d73042faa216",
+      "css": "sliders",
+      "code": 61918,
+      "src": "fontawesome"
     }
   ]
 }
