front fix search engine ui/ux

--- a/apps/front/.env
+++ b/apps/front/.env
@@ -7,3 +7,6 @@ VITE_OPENROUTESERVICE_TOKEN=
 
 VITE_OPENROUTESERVICE_URL="https://api.openrouteservice.org"
 
+VITE_SEARCH_DEBOUNCE_DELAY=1000
+
+VITE_DEBUG=0
